# bedrock-chatbot-rust

./: Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: copilot_tasks.md  feature_refactor.md
.github/agents/: feature-developer.agent.md  qa-engineer.agent.md  qa-engineer.md  refactoring-specialist.agent.md
.github/instructions/: rust.instructions.md
agent/: Cargo.toml
agent/src/: agent.rs  lib.rs
agent/tests/: mcp_integration_test.rs
cli/: Cargo.toml
cli/src/: main.rs
mcp/: Cargo.toml  README.md
mcp/src/: config.rs  lib.rs  mcp.rs
mcp/tests/: integration_test.rs
mcp/tests/fixtures/: mock_mcp_server.sh
