[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "^1.8.11", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "^1.120.0"
aws-smithy-types = "^1.2"
tokio = { version = "^1.48.0", features = ["full"] }
thiserror = "^2.0"
mcp = { path = "../mcp" }
serde_json = "^1.0"
